# model_viewer

./: .gitignore  CMakeLists.txt  README.md
docs/: HANDOFF.zh-CN.md
shaders/: apex_material_common.glsl  apex_material_constants.glsl  composite.frag  composite.vert  mesh.frag  mesh.vert  mesh_transparent.frag
src/: ApexMaterial.cpp  ApexMaterial.h  Application.cpp  Application.h  CastImporter.cpp  CastImporter.h  Model.cpp  Model.h  ViewerMath.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
tools/: apex_material_probe.cpp  cast_import_probe.cpp
